src/main/resources/kube/istio/istio-dk/mvc-istio-deploy-svc-dk.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-prod-v1
  labels:
    app: mvc-prod
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvc-prod
      version: v1
  template:
    metadata:
      labels:
        app: mvc-prod
        version: v1
    spec:
      containers:
        - name: mvc-prod-v1
          image: docker:5000/king019/frame_service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-prod-detail-v1
  labels:
    app: mvc-prod-detail
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvc-prod-detail
      version: v1
  template:
    metadata:
      labels:
        app: mvc-prod-detail
        version: v1
    spec:
      containers:
        - name: mvc-prod-detail-v1
          image: docker:5000/king019/frame_service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-prod-detail-v2
  labels:
    app: mvc-prod-detail
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvc-prod-detail
      version: v2
  template:
    metadata:
      labels:
        app: mvc-prod-detail
        version: v2
    spec:
      containers:
        - name: mvc-prod-detail-v2
          image: docker:5000/king019/frame_service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    version: product-service
spec:
  #  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      #    nodePort: 30001
      protocol: TCP
  selector:
    app: mvc-prod
---
apiVersion: v1
kind: Service
metadata:
  name: product-detail-service
  labels:
    version: product-detail-service
spec:
  #  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      #    nodePort: 30001
      protocol: TCP
  selector:
    app: mvc-prod-detail
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-detail-des
spec:
  host: product-detail-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mvc-version-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-vs
spec:
  hosts:
    - "service.k8s.com"
  gateways:
    - mvc-version-gateway
  http:
    - match:
        - uri:
            prefix: /
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 1ms
        # abort:
        #   httpStatus: 500
        #   percentage:
        #     value: 100
      route:
        - destination:
            host: product-service
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-detail-vs
spec:
  hosts:
    - product-detail-service
  http:
    - match:
        - uri:
            prefix: /
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 1ms
      route:
        - destination:
            host: product-detail-service
            subset: v1
            port:
              number: 80
          weight: 0
        - destination:
            host: product-detail-service
            subset: v2
            port:
              number: 80
          weight: 100
